--- a/index.html
+++ b/index.html
@@ -75,6 +75,46 @@
         </div>
         <div id="display_meal">
             <h2>Gerichte Auswählen</h2>
+            <div class="form-group">
+                <label for="meal1">Person 1:</label>
+                <select class="form-control" id="meal1">
+                    <option>Bitte wählen</option>
+                    <option>Pizza 10€</option>
+                    <option>Döner 4€</option>
+                    <option>Bruger 7€</option>
+                    <option>Brot 3€</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="meal2">Person 2:</label>
+                <select class="form-control" id="meal2">
+                    <option>Bitte wählen</option>
+                    <option>Pizza 10€</option>
+                    <option>Döner 4€</option>
+                    <option>Bruger 7€</option>
+                    <option>Brot 3€</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="meal3">Person 3:</label>
+                <select class="form-control" id="meal3">
+                    <option>Bitte wählen</option>
+                    <option>Pizza 10€</option>
+                    <option>Döner 4€</option>
+                    <option>Bruger 7€</option>
+                    <option>Brot 3€</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="meal4">Person 4:</label>
+                <select class="form-control" id="meal4">
+                    <option>Bitte wählen</option>
+                    <option>Pizza 10€</option>
+                    <option>Döner 4€</option>
+                    <option>Bruger 7€</option>
+                    <option>Brot 3€</option>
+                </select>
+            </div>
 
             <div class="form-group d-flex justify-content-between">
                 <button id="btn_step_4_back" class="btn btn-warning mb-2">Zurück</button>
