Bestellung abgeschlossen ansicht mit text

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <a class="navbar-brand" href="#">Restaurant-Planer</a>
 </nav>
     <div class="container  w-50">
-        <h1 class="text-center">Willkommen beim Restaurant-Planer</h1>
+
 
         <div id="display_intro" class="text-center">
+            <h1>Willkommen beim Restaurant-Planer</h1>
             <p>Auf dieser Website können Sie einen Tisch für mehrere Personen reservieren und
-                sich sogar ihren wunsch Tisch aussuchen. Des weiteren können Sie im Anschluss
+                sich sogar ihren wunsch Tisch aussuchen. Des Weiteren können Sie im Anschluss
                 gleich ihr Essen mitbestellen.
             </p>
             <button id="btn_step_1" type="button" class="btn btn-success">Neue Reservierung</button>
@@ -130,6 +131,10 @@
         </div>
         <div id="display_complete">
             <h2>Bestellung Abgesendet</h2>
+            <p>
+                Ihre Bestellung ist erfolgreich bei uns eingegangen und
+                wir werden ihnen eine Bestätigungs-E-mail schicken.
+            </p>
             <div class="form-group d-flex justify-content-center">
                 <button id="btn_step_6" class="btn btn-success mb-2">Zurück zum Start</button>
             </div>
