--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
 <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="#">Restaurant-Planer</a>
+    <button><a href="login.html">Admin Login</a></button>
 </nav>
     <div class="container  w-50">
 
